renovate config update v2

--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "baseBranches": ["main", "master", "R2-2024"],
-  "branchPrefix": "R2_2024_renovate_",
+  "branchPrefix": "renovate_",
   "automerge": false,
   "separateMinorPatch": true,
   "separateMajorMinor": true,
