--- a/package.json
+++ b/package.json
@@ -40,14 +40,12 @@
     "@folio/notes": ">=1.0.0",
     "@folio/plugin-find-authority": "https://github.com/folio-org/ui-plugin-find-authority.git#master",
     "@folio/plugin-find-agreement": ">=2.0.0",
-    "@folio/stripes-core": "^10.0.0",
-    "@folio/stripes-components": "https://github.com/folio-org/stripes-components.git#master",
+    "@folio/stripes-ui": ">=1.0.0",
     "@folio/stripes-authority-components": "https://github.com/folio-org/stripes-authority-components.git#master",
     "@folio/stripes-marc-components": "https://github.com/folio-org/stripes-marc-components.git#master",
     "@folio/stripes-acq-components": "https://github.com/folio-org/stripes-acq-components.git#master",
     "@folio/stripes-erm-components": "https://github.com/folio-org/stripes-erm-components.git#master",
     "@folio/stripes-inventory-components": "https://github.com/folio-org/stripes-inventory-components.git#main",
-    "@folio/stripes-ui": ">=1.0.0",
     "@folio/users": "https://github.com/folio-org/ui-users.git#master",
     "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#master",
     "@folio/plugin-find-organization": ">=1.0.0",
@@ -88,13 +86,13 @@
     "moment": "~2.29.0",
     "redux-form": "^8.0.0",
     "@folio/stripes": "^9.0.0",
-    "@folio/stripes-components": "^12.0.0",
-    "@folio/stripes-connect": "^9.0.0",
-    "@folio/stripes-core": "^10.0.0",
+    "@folio/stripes-connect": "https://github.com/folio-org/stripes-connect.git#master",
+    "@folio/stripes-core": "https://github.com/folio-org/stripes-core.git#master",
     "@folio/stripes-final-form": "^8.0.0",
     "@folio/stripes-form": "^9.0.0",
-    "@folio/stripes-smart-components": "^9.0.0",
+    "@folio/stripes-smart-components": "https://github.com/folio-org/stripes-smart-components.git#master",
     "@folio/stripes-util": "^6.0.0",
+    "@folio/stripes-components": "https://github.com/folio-org/stripes-components.git#master", 
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
