--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "@folio/plugin-find-organization": ">=1.0.0",
     "@folio/plugin-find-package-title": ">=1.0.0",
     "@folio/plugin-find-po-line": ">=1.0.0",
-    "@folio/plugin-find-user": ">=1.3.0",
+    "@folio/plugin-find-user": "https://github.com/folio-org/ui-plugin-find-user.git#UIPFU-91",
     "@folio/quick-marc": ">=1.0.0",
     "@folio/receiving": ">=1.0.0",
     "@folio/remote-storage": ">=1.0.0",
