--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "@folio/servicepoints": ">=1.1.0",
     "@folio/stripes": "^7.0.0",
     "@folio/stripes-erm-components": "^6.0.0",
+    "@folio/stripes-inventory-components": ">=1.0.0",
+    "@folio/stripes-marc-components": ">=1.0.0",
     "@folio/tags": ">=1.1.0",
     "@folio/tenant-settings": ">=2.5.1",
     "@folio/users": ">=2.17.0",
