--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@folio/export-manager": ">=1.0.0",
     "@folio/finance": ">=1.1.0",
     "@folio/handler-stripes-registry": ">=1.0.0",
-    "@folio/inn-reach": ">=1.0.0",
+    "@folio/inn-reach": ">=1.1.0",
     "@folio/inventory": ">=1.4.0",
     "@folio/invoice": ">=1.0.0",
     "@folio/ldp": ">=1.1.0",
@@ -65,36 +65,44 @@
     "@folio/receiving": ">=1.0.0",
     "@folio/remote-storage": ">=1.0.0",
     "@folio/requests": ">=1.4.1",
-    "@folio/search": ">=1.3.0",
+    "@folio/requests-mediated": ">=1.0.0",
+    "@folio/serials-management": ">=1.0.0",
+    "@folio/service-interaction": ">=1.0.0",
     "@folio/servicepoints": ">=1.1.0",
-    "@folio/stripes": "^7.0.0",
-    "@folio/stripes-erm-components": "^6.0.0",
+    "@folio/stripes": "^9.0.0",
+    "@folio/stripes-authority-components": ">=2.0.0",
+    "@folio/stripes-erm-components": "^9.0.0",
     "@folio/stripes-inventory-components": ">=1.0.0",
     "@folio/stripes-marc-components": ">=1.0.0",
     "@folio/tags": ">=1.1.0",
     "@folio/tenant-settings": ">=2.5.1",
     "@folio/users": ">=2.17.0",
     "moment": "~2.29.0",
-    "react": "~17.0.2",
-    "react-dom": "~17.0.2",
-    "react-intl": "^5.25.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-final-form": "^6.5.9",
+    "react-final-form-arrays": "^3.1.3",
+    "react-intl": "^6.4.4",
     "react-query": "^3.13.0",
-    "react-redux": "^7.2.2",
+    "react-redux": "^8.0.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-titled": "^1.0.1",
-    "redux": "^4.0.5",
+    "react-titled": "^2.0.0",
+    "redux": "^4.2.1",
+    "redux-observable": "^1.2.0",
     "rxjs": "^6.6.7",
-    "swr": "^0.4.2"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "@folio/stripes-cli": "^2.0.0",
+    "@folio/stripes-cli": "^3.0.0",
+    "@types/lodash": "^4.14.197",
     "eslint": "^6.2.1",
     "lodash": "^4.17.5"
   },
   "resolutions": {
-    "@folio/stripes-cli": "^2.4.0",
-    "@rehooks/local-storage": "2.4.0",
+    "typescript": "~5.5",
+    "@rehooks/local-storage": "2.4.4",
+    "@types/react": "^18.3.14",
     "colors": "1.4.0",
     "final-form": "^4.20.4",
     "minimist": "^1.2.3",
