--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@folio/stripes-marc-components": "https://github.com/folio-org/stripes-marc-components.git#master",
     "@folio/stripes-acq-components": "https://github.com/folio-org/stripes-acq-components.git#master",
     "@folio/stripes-erm-components": "https://github.com/folio-org/stripes-erm-components.git#master",
-    "@folio/stripes-inventory-components": "https://github.com/folio-org/stripes-inventory-components.git#main",
+    "@folio/stripes-inventory-components": "https://github.com/folio-org/stripes-inventory-components.git#UISINVCOMP-48",
     "@folio/users": "https://github.com/folio-org/ui-users.git#master",
     "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#master",
     "@folio/plugin-find-organization": ">=1.0.0",
