--- a/package.json
+++ b/package.json
@@ -13,76 +13,12 @@
     "test-regression": "stripes test nightmare stripes.config.js --run WD/platform-core/checkout/users/inventory/requests/circulation/tenant-settings"
   },
   "dependencies": {
-    "@folio/acquisition-units": ">=1.0.0",
-    "@folio/agreements": ">=2.0.0",
-    "@folio/bulk-edit": ">=1.0.0",
-    "@folio/calendar": ">=2.0.5",
-    "@folio/checkin": ">=1.3.0",
-    "@folio/checkout": ">=1.3.0",
-    "@folio/circulation": ">=1.3.0",
-    "@folio/circulation-log": ">=1.0.0",
-    "@folio/claims": ">=1.0.0",
-    "@folio/courses": ">=1.0.0",
-    "@folio/dashboard": ">=1.0.0",
-    "@folio/data-export": ">=1.0.0",
-    "@folio/data-import": ">=0.0.0",
     "@folio/developer": ">=1.5.0",
-    "@folio/eholdings": ">=1.1.0",
-    "@folio/erm-comparisons": ">=1.0.0",
-    "@folio/erm-usage": ">=1.0.3",
-    "@folio/export-manager": ">=1.0.0",
-    "@folio/finance": ">=1.1.0",
-    "@folio/gobi-settings": ">=1.0.0",
-    "@folio/handler-stripes-registry": ">=1.0.0",
-    "@folio/inn-reach": ">=1.1.0",
-    "@folio/inventory": ">=1.4.0",
-    "@folio/invoice": ">=1.0.0",
-    "@folio/ldp": ">=1.1.0",
-    "@folio/licenses": ">=2.0.0",
-    "@folio/lists": ">=1.2.0",
-    "@folio/local-kb-admin": ">=1.0.0",
-    "@folio/marc-authorities": ">=1.0.0",
-    "@folio/myprofile": ">=1.1.0",
-    "@folio/notes": ">=1.0.0",
-    "@folio/oa": ">=1.0.0",
-    "@folio/oai-pmh": ">=1.0.0",
-    "@folio/orders": ">=1.1.0",
-    "@folio/organizations": ">=1.0.0",
-    "@folio/plugin-bursar-export": ">=1.0.0",
-    "@folio/plugin-create-inventory-records": ">=1.0.0",
-    "@folio/plugin-eusage-reports": ">=1.0.0",
-    "@folio/plugin-find-agreement": ">=2.0.0",
-    "@folio/plugin-find-authority": ">=1.0.0",
-    "@folio/plugin-find-contact": ">=1.0.0",
-    "@folio/plugin-find-eresource": ">=1.0.0",
-    "@folio/plugin-find-erm-usage-data-provider": ">=1.0.0",
-    "@folio/plugin-find-fund": ">=1.0.0",
-    "@folio/plugin-find-import-profile": ">=1.1.0",
-    "@folio/plugin-find-instance": ">=1.1.0",
-    "@folio/plugin-find-interface": ">=1.0.0",
-    "@folio/plugin-find-license": ">=2.0.0",
-    "@folio/plugin-find-organization": ">=1.0.0",
-    "@folio/plugin-find-package-title": ">=1.0.0",
-    "@folio/plugin-find-po-line": ">=1.0.0",
-    "@folio/plugin-find-user": ">=1.3.0",
-    "@folio/plugin-query-builder": ">=1.0.0",
-    "@folio/quick-marc": ">=1.0.0",
-    "@folio/reading-room": ">=1.0.0",
-    "@folio/receiving": ">=1.0.0",
-    "@folio/remote-storage": ">=1.0.0",
-    "@folio/requests": ">=1.4.1",
-    "@folio/requests-mediated": ">=1.0.0",
-    "@folio/serials-management": ">=1.0.0",
-    "@folio/service-interaction": ">=1.0.0",
-    "@folio/servicepoints": ">=1.1.0",
-    "@folio/stripes": "^9.0.0",
-    "@folio/stripes-authority-components": ">=2.0.0",
-    "@folio/stripes-erm-components": "^9.0.0",
-    "@folio/stripes-inventory-components": ">=1.0.0",
-    "@folio/stripes-marc-components": ">=1.0.0",
-    "@folio/tags": ">=1.1.0",
-    "@folio/tenant-settings": ">=2.5.1",
-    "@folio/users": ">=2.17.0",
+    "@folio/inventory": ">=1.5.0",
+    "@folio/stripes": "^10.0.0",
+    "@folio/stripes-inventory-components": ">1.0.0",
+    "@folio/stripes-marc-components": ">1.0.0",
+    "@folio/users": "^11.0.9",
     "final-form": "^4.20.7",
     "final-form-arrays": "^3.0.2",
     "moment": "~2.29.0",
@@ -102,7 +38,7 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "@folio/stripes-cli": "^3.0.0",
+    "@folio/stripes-cli": "github:folio-org/stripes-cli#STRIPES-957",
     "@types/lodash": "^4.14.197",
     "eslint": "^6.2.1",
     "lodash": "^4.17.5"
