--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@folio/acquisition-units": ">=1.0.0",
+    "@folio/consortia-settings": ">=1.0.0",
     "@folio/agreements": ">=2.0.0",
     "@folio/bulk-edit": ">=1.0.0",
     "@folio/calendar": ">=2.0.5",
