--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@folio/calendar": ">=2.0.5",
     "@folio/checkin": ">=1.3.0",
     "@folio/checkout": ">=1.3.0",
-    "@folio/circulation": "https://github.com/folio-org/ui-circulation.git#master",
+    "@folio/circulation": ">=1.3.0",
     "@folio/circulation-log": ">=1.0.0",
     "@folio/claims": ">=1.0.0",
     "@folio/courses": ">=1.0.0",
@@ -35,7 +35,7 @@
     "@folio/gobi-settings": ">=1.0.0",
     "@folio/handler-stripes-registry": ">=1.0.0",
     "@folio/inn-reach": ">=1.1.0",
-    "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#UIIN-3162",
+    "@folio/inventory": ">=1.4.0",
     "@folio/invoice": ">=1.0.0",
     "@folio/ldp": ">=1.1.0",
     "@folio/licenses": ">=2.0.0",
@@ -58,7 +58,7 @@
     "@folio/plugin-find-erm-usage-data-provider": ">=1.0.0",
     "@folio/plugin-find-fund": ">=1.0.0",
     "@folio/plugin-find-import-profile": ">=1.1.0",
-    "@folio/plugin-find-instance": "https://github.com/folio-org/ui-plugin-find-instance.git#master",
+    "@folio/plugin-find-instance": ">=1.1.0",
     "@folio/plugin-find-interface": ">=1.0.0",
     "@folio/plugin-find-license": ">=2.0.0",
     "@folio/plugin-find-organization": ">=1.0.0",
@@ -78,7 +78,7 @@
     "@folio/stripes": "^9.0.0",
     "@folio/stripes-authority-components": ">=2.0.0",
     "@folio/stripes-erm-components": "^9.0.0",
-    "@folio/stripes-inventory-components": "https://github.com/folio-org/stripes-inventory-components.git#UISINVCOMP-48",
+    "@folio/stripes-inventory-components": ">=1.0.0",
     "@folio/stripes-marc-components": ">=1.0.0",
     "@folio/tags": ">=1.1.0",
     "@folio/tenant-settings": ">=2.5.1",
