--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@folio/plugin-eusage-reports": "3.2.0",
     "@folio/service-interaction": "3.1.1",
     "@folio/stripes": "9.2.11",
+    "@folio/stripes-acq-components": "6.0.3",
     "@folio/stripes-authority-components": "5.0.3",
     "@folio/stripes-erm-components": "9.2.1",
     "@folio/stripes-inventory-components": "1.0.1",
