--- a/package.json
+++ b/package.json
@@ -13,19 +13,37 @@
     "test-regression": "stripes test nightmare stripes.config.js --run WD/platform-core/checkout/users/inventory/requests/circulation/tenant-settings"
   },
   "dependencies": {
+    "@folio/tags": ">=1.1.0",
+    "@folio/licenses": ">=2.0.0",
+    "@folio/circulation": "https://github.com/folio-org/ui-circulation.git#master",
+    "@folio/consortia-settings": "https://github.com/folio-org/ui-consortia-settings.git#master",
+    "@folio/receiving": "https://github.com/folio-org/ui-receiving.git#master",
+    "@folio/requests": "https://github.com/folio-org/ui-requests.git#master",
+    "@folio/eholdings": "https://github.com/folio-org/ui-eholdings.git#master",
+    "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#master",
+    "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#UIIN-3162",
+    "@folio/data-import": "https://github.com/folio-org/ui-data-import.git#master",
+    "@folio/myprofile": ">=1.1.0",
+    "@folio/notes": ">=1.0.0",
+    "@folio/plugin-find-authority": "https://github.com/folio-org/ui-plugin-find-authority.git#master",
+    "@folio/plugin-find-agreement": ">=2.0.0",
+    "@folio/stripes-ui": ">=1.0.0",
+    "@folio/stripes-authority-components": "https://github.com/folio-org/stripes-authority-components.git#master",
+    "@folio/stripes-marc-components": "https://github.com/folio-org/stripes-marc-components.git#master",
+    "@folio/stripes-acq-components": "https://github.com/folio-org/stripes-acq-components.git#master",
+    "@folio/stripes-erm-components": "https://github.com/folio-org/stripes-erm-components.git#master",
+    "@folio/stripes-inventory-components": "https://github.com/folio-org/stripes-inventory-components.git#UISINVCOMP-48",
+    "@folio/users": "https://github.com/folio-org/ui-users.git#master",
+    "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#master",
     "@folio/agreements": ">=2.0.0",
     "@folio/bulk-edit": ">=1.0.0",
     "@folio/checkin": ">=1.3.0",
     "@folio/checkout": ">=1.3.0",
-    "@folio/circulation": ">=1.3.0",
     "@folio/circulation-log": ">=1.0.0",
-    "@folio/claims": ">=1.0.0",
     "@folio/courses": ">=1.0.0",
     "@folio/dashboard": ">=1.0.0",
     "@folio/data-export": ">=1.0.0",
-    "@folio/data-import": ">=0.0.0",
     "@folio/developer": ">=1.5.0",
-    "@folio/eholdings": ">=1.1.0",
     "@folio/erm-comparisons": ">=1.0.0",
     "@folio/erm-usage": ">=1.0.3",
     "@folio/export-manager": ">=1.0.0",
@@ -33,22 +51,15 @@
     "@folio/gobi-settings": ">=1.0.0",
     "@folio/handler-stripes-registry": ">=1.0.0",
     "@folio/inn-reach": ">=1.1.0",
-    "@folio/inventory": ">=1.4.0",
     "@folio/invoice": ">=1.0.0",
     "@folio/ldp": ">=1.1.0",
-    "@folio/licenses": ">=2.0.0",
     "@folio/local-kb-admin": ">=1.0.0",
-    "@folio/marc-authorities": ">=1.0.0",
-    "@folio/myprofile": ">=1.1.0",
-    "@folio/notes": ">=1.0.0",
     "@folio/oa": ">=1.0.0",
     "@folio/oai-pmh": ">=1.0.0",
     "@folio/orders": ">=1.1.0",
     "@folio/organizations": ">=1.0.0",
     "@folio/plugin-create-inventory-records": ">=1.0.0",
     "@folio/plugin-eusage-reports": ">=1.0.0",
-    "@folio/plugin-find-agreement": ">=2.0.0",
-    "@folio/plugin-find-authority": ">=1.0.0",
     "@folio/plugin-find-contact": ">=1.0.0",
     "@folio/plugin-find-eresource": ">=1.0.0",
     "@folio/plugin-find-erm-usage-data-provider": ">=1.0.0",
@@ -62,23 +73,14 @@
     "@folio/plugin-find-po-line": ">=1.0.0",
     "@folio/plugin-find-user": ">=1.3.0",
     "@folio/plugin-query-builder": ">=1.0.0",
-    "@folio/quick-marc": ">=1.0.0",
     "@folio/reading-room": ">=1.0.0",
-    "@folio/receiving": ">=1.0.0",
     "@folio/remote-storage": ">=1.0.0",
-    "@folio/requests": ">=1.4.1",
     "@folio/requests-mediated": ">=1.0.0",
     "@folio/serials-management": ">=1.0.0",
     "@folio/service-interaction": ">=1.0.0",
     "@folio/servicepoints": ">=1.1.0",
     "@folio/stripes": "^9.0.0",
-    "@folio/stripes-authority-components": ">=2.0.0",
-    "@folio/stripes-erm-components": "^9.0.0",
-    "@folio/stripes-inventory-components": ">=1.0.0",
-    "@folio/stripes-marc-components": ">=1.0.0",
-    "@folio/tags": ">=1.1.0",
     "@folio/tenant-settings": ">=2.5.1",
-    "@folio/users": ">=2.17.0",
     "final-form": "^4.20.7",
     "final-form-arrays": "^3.0.2",
     "moment": "~2.29.0",
