--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@folio/gobi-settings": ">=1.0.0",
     "@folio/handler-stripes-registry": ">=1.0.0",
     "@folio/inn-reach": ">=1.1.0",
-    "@folio/inventory": ">=1.4.0",
+    "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#UIIN-3160",
     "@folio/invoice": ">=1.0.0",
     "@folio/ldp": ">=1.1.0",
     "@folio/licenses": ">=2.0.0",
@@ -83,7 +83,7 @@
     "@folio/stripes-inventory-components": ">=1.0.0",
     "@folio/stripes-marc-components": ">=1.0.0",
     "@folio/tags": ">=1.1.0",
-    "@folio/tenant-settings": "https://github.com/folio-org/ui-tenant-settings.git#UITEN-281",
+    "@folio/tenant-settings": ">=1.0.0",
     "@folio/users": ">=11.0.0",
     "final-form": "^4.20.7",
     "final-form-arrays": "^3.0.2",
