--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@folio/agreements": ">=2.0.0",
     "@folio/bulk-edit": ">=1.0.0",
     "@folio/calendar": ">=2.0.5",
-    "@folio/checkin": "10.0.1",
-    "@folio/checkout": "11.0.2",
-    "@folio/circulation": "10.0.1",
+    "@folio/checkin": "^10.0.0",
+    "@folio/checkout": "^11.0.0",
+    "@folio/circulation": "^10.0.1",
     "@folio/circulation-log": ">=1.0.0",
     "@folio/claims": ">=1.0.0",
     "@folio/courses": ">=1.0.0",
@@ -70,8 +70,8 @@
     "@folio/reading-room": ">=1.0.0",
     "@folio/receiving": ">=1.0.0",
     "@folio/remote-storage": ">=1.0.0",
-    "@folio/requests": "11.0.3",
-    "@folio/requests-mediated": "2.0.1",
+    "@folio/requests": "^11.0.3",
+    "@folio/requests-mediated": "^2.0.1",
     "@folio/serials-management": ">=1.0.0",
     "@folio/service-interaction": ">=1.0.0",
     "@folio/servicepoints": ">=1.1.0",
