--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
   "name": "@folio/platform-complete",
-  "version": "1.1.0-SNAPSHOT",
+  "version": "3.7.0",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "export NODE_OPTIONS=\"--max-old-space-size=8000 $NODE_OPTIONS\"; stripes build stripes.config.js",
+    "build": "export NODE_OPTIONS=\"--max-old-space-size=8192 $NODE_OPTIONS\"; stripes build stripes.config.js --sourcemap",
     "stripes": "stripes",
     "start": "stripes serve stripes.config.js",
     "build-module-descriptors": "stripes mod descriptor stripes.config.js --output ./ModuleDescriptors",
     "local": "f=stripes.config.js; test -f $f.local && f=$f.local; echo Using config $f; stripes serve $f",
     "test": "echo 'No unit tests implemented'",
-    "test-int": "stripes test nightmare stripes.config.js",
-    "test-regression": "stripes test nightmare stripes.config.js --run WD/platform-core/checkout/users/inventory/requests/circulation/tenant-settings"
+    "lint": "eslint test/ui-testing"
   },
   "dependencies": {
+    "@folio/bulk-edit": ">=1.0.0",
+    "@folio/courses": ">=1.0.0",
+    "@folio/dashboard": ">=1.0.0",
+    "@folio/data-export": ">=1.0.0",
+    "@folio/export-manager": ">=1.0.0",
+    "@folio/handler-stripes-registry": ">=1.0.0",
+    "@folio/invoice": ">=1.0.0",
+    "@folio/orders": ">=1.1.0",
+    "@folio/plugin-create-inventory-records": ">=1.0.0",
+    "@folio/plugin-find-import-profile": ">=1.1.0",
+    "@folio/plugin-find-instance": "https://github.com/folio-org/ui-plugin-find-instance.git#master",
+    "@folio/plugin-find-interface": ">=1.0.0",
+    "@folio/plugin-find-license": ">=2.0.0",
     "@folio/tags": ">=1.1.0",
+    "@folio/agreements": ">=2.0.0",
     "@folio/licenses": ">=2.0.0",
     "@folio/circulation": "https://github.com/folio-org/ui-circulation.git#master",
     "@folio/consortia-settings": "https://github.com/folio-org/ui-consortia-settings.git#master",
@@ -35,50 +48,11 @@
     "@folio/stripes-inventory-components": "https://github.com/folio-org/stripes-inventory-components.git#UISINVCOMP-48",
     "@folio/users": "https://github.com/folio-org/ui-users.git#master",
     "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#master",
-    "@folio/agreements": ">=2.0.0",
-    "@folio/bulk-edit": ">=1.0.0",
-    "@folio/checkin": ">=1.3.0",
-    "@folio/checkout": ">=1.3.0",
-    "@folio/circulation-log": ">=1.0.0",
-    "@folio/courses": ">=1.0.0",
-    "@folio/dashboard": ">=1.0.0",
-    "@folio/data-export": ">=1.0.0",
-    "@folio/developer": ">=1.5.0",
-    "@folio/erm-comparisons": ">=1.0.0",
-    "@folio/erm-usage": ">=1.0.3",
-    "@folio/export-manager": ">=1.0.0",
-    "@folio/finance": ">=1.1.0",
-    "@folio/gobi-settings": ">=1.0.0",
-    "@folio/handler-stripes-registry": ">=1.0.0",
-    "@folio/inn-reach": ">=1.1.0",
-    "@folio/invoice": ">=1.0.0",
-    "@folio/ldp": ">=1.1.0",
-    "@folio/local-kb-admin": ">=1.0.0",
-    "@folio/oa": ">=1.0.0",
-    "@folio/oai-pmh": ">=1.0.0",
-    "@folio/orders": ">=1.1.0",
-    "@folio/organizations": ">=1.0.0",
-    "@folio/plugin-create-inventory-records": ">=1.0.0",
-    "@folio/plugin-eusage-reports": ">=1.0.0",
-    "@folio/plugin-find-contact": ">=1.0.0",
-    "@folio/plugin-find-eresource": ">=1.0.0",
-    "@folio/plugin-find-erm-usage-data-provider": ">=1.0.0",
-    "@folio/plugin-find-fund": ">=1.0.0",
-    "@folio/plugin-find-import-profile": ">=1.1.0",
-    "@folio/plugin-find-instance": ">=1.1.0",
-    "@folio/plugin-find-interface": ">=1.0.0",
-    "@folio/plugin-find-license": ">=2.0.0",
     "@folio/plugin-find-organization": ">=1.0.0",
     "@folio/plugin-find-package-title": ">=1.0.0",
     "@folio/plugin-find-po-line": ">=1.0.0",
     "@folio/plugin-find-user": ">=1.3.0",
     "@folio/plugin-query-builder": ">=1.0.0",
-    "@folio/reading-room": ">=1.0.0",
-    "@folio/remote-storage": ">=1.0.0",
-    "@folio/requests-mediated": ">=1.0.0",
-    "@folio/serials-management": ">=1.0.0",
-    "@folio/service-interaction": ">=1.0.0",
-    "@folio/servicepoints": ">=1.1.0",
     "@folio/stripes": "^9.0.0",
     "@folio/tenant-settings": ">=2.5.1",
     "final-form": "^4.20.7",
@@ -101,7 +75,6 @@
   },
   "devDependencies": {
     "@folio/stripes-cli": "^3.0.0",
-    "@types/lodash": "^4.14.197",
     "eslint": "^6.2.1",
     "lodash": "^4.17.5"
   },
@@ -112,6 +85,16 @@
     "final-form": "^4.20.4",
     "minimist": "^1.2.3",
     "moment": "~2.29.0",
-    "redux-form": "^8.0.0"
+    "redux-form": "^8.0.0",
+    "@folio/stripes": "^9.0.0",
+    "@folio/stripes-connect": "https://github.com/folio-org/stripes-connect.git#master",
+    "@folio/stripes-core": "https://github.com/folio-org/stripes-core.git#master",
+    "@folio/stripes-final-form": "^8.0.0",
+    "@folio/stripes-form": "^9.0.0",
+    "@folio/stripes-smart-components": "https://github.com/folio-org/stripes-smart-components.git#master",
+    "@folio/stripes-util": "^6.0.0",
+    "@folio/stripes-components": "https://github.com/folio-org/stripes-components.git#master", 
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
