remove unnecessary modules

--- a/package.json
+++ b/package.json
@@ -93,7 +93,9 @@
     "@folio/stripes-form": "^9.0.0",
     "@folio/stripes-smart-components": "https://github.com/folio-org/stripes-smart-components.git#master",
     "@folio/stripes-util": "^6.0.0",
-    "@folio/stripes-components": "https://github.com/folio-org/stripes-components.git#master", 
+    "@folio/stripes-components": "https://github.com/folio-org/stripes-components.git#master",
+    "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#UIIN-3162",
+    "@folio/stripes-inventory-components": "https://github.com/folio-org/stripes-inventory-components.git#UISINVCOMP-48",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
