use feature/version-history branch for MARC Authorities app

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@folio/receiving": "https://github.com/folio-org/ui-receiving.git#master",
     "@folio/requests": "https://github.com/folio-org/ui-requests.git#master",
     "@folio/eholdings": "https://github.com/folio-org/ui-eholdings.git#master",
-    "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#master",
+    "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#feature/version-history",
     "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#UIIN-3162",
     "@folio/data-import": "https://github.com/folio-org/ui-data-import.git#master",
     "@folio/myprofile": ">=1.1.0",
@@ -96,6 +96,7 @@
     "@folio/stripes-components": "https://github.com/folio-org/stripes-components.git#master",
     "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#UIIN-3162",
     "@folio/stripes-inventory-components": "https://github.com/folio-org/stripes-inventory-components.git#UISINVCOMP-48",
+    "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#feature/version-history",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
