--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@folio/requests": "https://github.com/folio-org/ui-requests.git#master",
     "@folio/eholdings": "https://github.com/folio-org/ui-eholdings.git#master",
     "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#feature/version-history",
-    "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#UIIN-3162",
+    "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#master",
     "@folio/data-import": "https://github.com/folio-org/ui-data-import.git#master",
     "@folio/myprofile": ">=1.1.0",
     "@folio/notes": ">=1.0.0",
@@ -45,7 +45,7 @@
     "@folio/stripes-marc-components": "https://github.com/folio-org/stripes-marc-components.git#master",
     "@folio/stripes-acq-components": "https://github.com/folio-org/stripes-acq-components.git#master",
     "@folio/stripes-erm-components": "https://github.com/folio-org/stripes-erm-components.git#master",
-    "@folio/stripes-inventory-components": "https://github.com/folio-org/stripes-inventory-components.git#UISINVCOMP-48",
+    "@folio/stripes-inventory-components": "https://github.com/folio-org/stripes-inventory-components.git#main",
     "@folio/users": "https://github.com/folio-org/ui-users.git#master",
     "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#master",
     "@folio/plugin-find-organization": ">=1.0.0",
@@ -94,8 +94,8 @@
     "@folio/stripes-smart-components": "https://github.com/folio-org/stripes-smart-components.git#master",
     "@folio/stripes-util": "^6.0.0",
     "@folio/stripes-components": "https://github.com/folio-org/stripes-components.git#master",
-    "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#UIIN-3162",
-    "@folio/stripes-inventory-components": "https://github.com/folio-org/stripes-inventory-components.git#UISINVCOMP-48",
+    "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#master",
+    "@folio/stripes-inventory-components": "https://github.com/folio-org/stripes-inventory-components.git#main",
     "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#feature/version-history",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
