--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@folio/acquisition-units": ">=1.0.0",
     "@folio/agreements": ">=2.0.0",
-    "@folio/bulk-edit": ">=1.0.0",
+    "@folio/bulk-edit": "https://github.com/folio-org/ui-bulk-edit#65b56d34c5fb507531ca82abe91ea5cbf34cc3fb",
     "@folio/calendar": ">=2.0.5",
     "@folio/checkin": ">=1.3.0",
     "@folio/checkout": ">=1.3.0",
