--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@folio/requests": "https://github.com/folio-org/ui-requests.git#master",
     "@folio/eholdings": "https://github.com/folio-org/ui-eholdings.git#master",
     "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#feature/version-history",
-    "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#master",
+    "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#UXPROD-4126",
     "@folio/data-import": "https://github.com/folio-org/ui-data-import.git#master",
     "@folio/myprofile": ">=1.1.0",
     "@folio/notes": ">=1.0.0",
@@ -94,7 +94,7 @@
     "@folio/stripes-smart-components": "https://github.com/folio-org/stripes-smart-components.git#master",
     "@folio/stripes-util": "^6.0.0",
     "@folio/stripes-components": "https://github.com/folio-org/stripes-components.git#master",
-    "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#master",
+    "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#UXPROD-4126",
     "@folio/stripes-inventory-components": "https://github.com/folio-org/stripes-inventory-components.git#main",
     "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#feature/version-history",
     "react": "^18.2.0",
