--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@folio/agreements": ">=2.0.0",
     "@folio/bulk-edit": ">=1.0.0",
     "@folio/calendar": ">=2.0.5",
-    "@folio/checkin": ">=1.3.0",
+    "@folio/checkin": "https://github.com/folio-org/ui-checkin.git#testLinks",
     "@folio/checkout": ">=1.3.0",
     "@folio/circulation": ">=9.2.0",
     "@folio/circulation-log": ">=1.0.0",
