--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@folio/notes": ">=1.0.0",
     "@folio/plugin-find-authority": "https://github.com/folio-org/ui-plugin-find-authority.git#master",
     "@folio/plugin-find-agreement": ">=2.0.0",
+    "@folio/service-interaction": ">=1.0.0",
     "@folio/stripes-ui": ">=1.0.0",
     "@folio/stripes-authority-components": "https://github.com/folio-org/stripes-authority-components.git#master",
     "@folio/stripes-marc-components": "https://github.com/folio-org/stripes-marc-components.git#master",
