--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,5 @@
 {
-  "baseBranches": ["main", "master","R2-2023","R1-2023", "R2-2023-Consortia","R1-2024","R1-2024-Consortia","R2-2024","R2-2024-Consortia"],
+  "baseBranches": ["main", "master","R2-2024","R2-2024-Consortia","R1-2025"],
   "branchPrefix": "renovate_",
   "automerge": false,
   "separateMinorPatch": true,
@@ -36,41 +36,6 @@
       "enabled": true
     },
     {
-      "baseBranchList": ["R1-2023"],
-      "packagePatterns": ["^@folio/", "^folioorg/"],
-      "groupName": "FOLIO R1 2023 updates",
-      "updateTypes": ["patch"],
-      "enabled": true
-    },
-    {
-      "baseBranchList": ["R2-2023"],
-      "packagePatterns": ["^@folio/", "^folioorg/"],
-      "groupName": "FOLIO R2 2023 updates",
-      "updateTypes": ["patch"],
-      "enabled": true
-    },
-    {
-      "baseBranchList": ["R2-2023-Consortia"],
-      "packagePatterns": ["^@folio/", "^folioorg/"],
-      "groupName": "FOLIO R2 2023 updates Consortia",
-      "updateTypes": ["patch"],
-      "enabled": true
-    },
-    {
-      "baseBranchList": ["R1-2024"],
-      "packagePatterns": ["^@folio/", "^folioorg/"],
-      "groupName": "FOLIO R1 2024 updates",
-      "updateTypes": ["patch"],
-      "enabled": true
-    },
-    {
-      "baseBranchList": ["R1-2024-Consortia"],
-      "packagePatterns": ["^@folio/", "^folioorg/"],
-      "groupName": "FOLIO R1 2024 updates Consortia",
-      "updateTypes": ["patch"],
-      "enabled": true
-    },
-    {
       "baseBranchList": ["R2-2024"],
       "packagePatterns": ["^@folio/", "^folioorg/"],
       "groupName": "FOLIO R2 2024 updates",
@@ -81,6 +46,13 @@
       "baseBranchList": ["R2-2024-Consortia"],
       "packagePatterns": ["^@folio/", "^folioorg/"],
       "groupName": "FOLIO R2 2024 updates Consortia",
+      "updateTypes": ["patch"],
+      "enabled": true
+    },
+    {
+      "baseBranchList": ["R1-2025"],
+      "packagePatterns": ["^@folio/", "^folioorg/"],
+      "groupName": "FOLIO R1 2025 updates",
       "updateTypes": ["patch"],
       "enabled": true
     }
