--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "@folio/serials-management": ">=1.0.0",
     "@folio/service-interaction": ">=1.0.0",
     "@folio/servicepoints": ">=1.1.0",
-    "@folio/stripes": "^9.0.0",
+    "@folio/stripes": ">=9.0.0",
     "@folio/stripes-authority-components": ">=2.0.0",
     "@folio/stripes-erm-components": "^9.0.0",
     "@folio/stripes-inventory-components": ">=1.0.0",
