--- a/package.json
+++ b/package.json
@@ -3,89 +3,89 @@
   "version": "3.9.0",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "export NODE_OPTIONS=\"--max-old-space-size=8000 $NODE_OPTIONS\"; stripes build stripes.config.js",
-    "stripes": "stripes",
-    "start": "stripes serve stripes.config.js",
-    "build-module-descriptors": "stripes mod descriptor stripes.config.js --output ./ModuleDescriptors",
-    "local": "f=stripes.config.js; test -f $f.local && f=$f.local; echo Using config $f; stripes serve $f",
-    "test": "echo 'No unit tests implemented'",
-    "lint": "eslint test/ui-testing"
-  },
+    "build": "export NODE_OPTIONS=\"--max-old-space-size=4096 $NODE_OPTIONS\"; stripes-build build stripes.config.js",
+    "build-module-descriptors": "stripes-build mod descriptor stripes.config.js --output ./ModuleDescriptors"
+},
   "dependencies": {
-    "@folio/acquisition-units": "5.2.0",
-    "@folio/agreements": "11.1.1",
-    "@folio/bulk-edit": "4.2.4",
+    "@folio/acquisition-units": "6.0.0",
+    "@folio/agreements": "12.0.0",
+    "@folio/bulk-edit": "5.0.0",
     "@folio/calendar": "11.0.3",
-    "@folio/checkin": "10.0.1",
-    "@folio/checkout": "11.0.3",
-    "@folio/circulation": "10.0.1",
-    "@folio/circulation-log": "5.0.1",
-    "@folio/courses": "6.1.1",
-    "@folio/dashboard": "6.1.1",
-    "@folio/data-export": "6.2.0",
-    "@folio/data-import": "8.0.5",
-    "@folio/developer": "9.0.0",
-    "@folio/eholdings": "10.0.1",
-    "@folio/erm-comparisons": "7.1.0",
-    "@folio/erm-usage": "10.0.1",
-    "@folio/export-manager": "3.2.0",
-    "@folio/finance": "7.0.1",
-    "@folio/gobi-settings": "3.2.0",
-    "@folio/handler-stripes-registry": "2.3.0",
-    "@folio/inventory": "12.0.13",
-    "@folio/invoice": "6.1.2",
-    "@folio/ldp": "2.3.0",
-    "@folio/licenses": "11.1.1",
-    "@folio/lists" : "3.1.6",
-    "@folio/local-kb-admin": "8.1.1",
-    "@folio/marc-authorities": "6.0.1",
-    "@folio/myprofile": "9.2.0",
-    "@folio/notes": "10.0.0",
-    "@folio/oai-pmh": "5.2.0",
-    "@folio/orders": "7.0.4",
-    "@folio/organizations": "5.2.0",
+    "@folio/checkin": "11.0.0",
+    "@folio/checkout": "12.0.0",
+    "@folio/circulation": "11.0.0",
+    "@folio/circulation-log": "6.0.0",
+    "@folio/claims": "1.0.0",
+    "@folio/courses": "7.0.0",
+    "@folio/dashboard": "7.0.0",
+    "@folio/data-export": "7.0.0",
+    "@folio/data-import": "9.0.0",
+    "@folio/developer": "10.0.0",
+    "@folio/eholdings": "11.0.0",
+    "@folio/erm-comparisons": "8.0.0",
+    "@folio/erm-usage": "11.0.0",
+    "@folio/export-manager": "4.0.0",
+    "@folio/finance": "8.0.0",
+    "@folio/gobi-settings": "4.0.0",
+    "@folio/handler-stripes-registry": "3.0.0",
+    "@folio/inventory": "13.0.0",
+    "@folio/invoice": "7.0.0",
+    "@folio/ld-folio-wrapper": "1.2.0",
+    "@folio/ldp": "3.0.1",
+    "@folio/licenses": "12.0.1",
+    "@folio/lists" : "4.0.0",
+    "@folio/local-kb-admin": "9.0.0",
+    "@folio/marc-authorities": "7.0.0",
+    "@folio/myprofile": "10.0.0",
+    "@folio/notes": "11.0.0",
+    "@folio/oai-pmh": "6.0.0",
+    "@folio/orders": "8.0.0",
+    "@folio/organizations": "6.0.0",
     "@folio/plugin-bursar-export": "4.0.3",
-    "@folio/plugin-create-inventory-records": "5.0.1",
-    "@folio/plugin-find-agreement": "11.1.0",
-    "@folio/plugin-find-authority": "4.1.0",
-    "@folio/plugin-find-contact": "5.2.0",
-    "@folio/plugin-find-eresource": "7.1.0",
-    "@folio/plugin-find-erm-usage-data-provider": "6.2.0",
-    "@folio/plugin-find-fund": "3.2.0",
-    "@folio/plugin-find-import-profile": "8.0.0",
-    "@folio/plugin-find-instance": "8.0.1",
-    "@folio/plugin-find-interface": "5.2.0",
-    "@folio/plugin-find-license": "11.1.0",
-    "@folio/plugin-find-organization": "5.2.0",
-    "@folio/plugin-find-package-title": "6.2.0",
-    "@folio/plugin-find-po-line": "5.2.0",
-    "@folio/plugin-find-user": "7.2.0",
-    "@folio/plugin-query-builder" : "1.2.9",
-    "@folio/quick-marc": "9.0.1",
-    "@folio/reading-room": "1.0.0",
-    "@folio/receiving": "6.0.6",
-    "@folio/remote-storage": "6.0.0",
-    "@folio/requests": "11.0.6",
-    "@folio/servicepoints": "7.2.0",
-    "@folio/plugin-eusage-reports": "3.2.0",
-    "@folio/service-interaction": "3.1.1",
-    "@folio/stripes": "9.2.11",
-    "@folio/stripes-authority-components": "5.0.3",
-    "@folio/stripes-erm-components": "9.2.1",
-    "@folio/stripes-inventory-components": "1.0.2",
-    "@folio/stripes-marc-components": "1.1.0",
-    "@folio/serials-management": "1.1.2",
-    "@folio/tags": "8.2.1",
-    "@folio/tenant-settings": "9.0.0",
-    "@folio/users": "11.0.11",
+    "@folio/plugin-create-inventory-records": "6.0.0",
+    "@folio/plugin-find-agreement": "12.0.0",
+    "@folio/plugin-find-authority": "5.0.0",
+    "@folio/plugin-find-contact": "6.0.0",
+    "@folio/plugin-find-eresource": "8.0.0",
+    "@folio/plugin-find-erm-usage-data-provider": "7.0.0",
+    "@folio/plugin-find-fund": "4.0.0",
+    "@folio/plugin-find-import-profile": "9.0.0",
+    "@folio/plugin-find-instance": "9.0.0",
+    "@folio/plugin-find-interface": "6.0.0",
+    "@folio/plugin-find-license": "12.0.0",
+    "@folio/plugin-find-organization": "6.0.0",
+    "@folio/plugin-find-package-title": "7.0.0",
+    "@folio/plugin-find-po-line": "6.0.0",
+    "@folio/plugin-find-user": "8.0.0",
+    "@folio/plugin-query-builder" : "2.0.0",
+    "@folio/quick-marc": "10.0.0",
+    "@folio/reading-room": "2.0.0",
+    "@folio/receiving": "7.0.0",
+    "@folio/remote-storage": "7.0.0",
+    "@folio/requests": "12.0.0",
+    "@folio/servicepoints": "8.0.0",
+    "@folio/plugin-eusage-reports": "4.0.1",
+    "@folio/service-interaction": "4.0.0",
+    "@folio/stripes": "10.0.1",
+    "@folio/stripes-authority-components": "6.0.0",
+    "@folio/stripes-build": "1.0.0",
+    "@folio/stripes-erm-components": "10.0.0",
+    "@folio/stripes-inventory-components": "2.0.0",
+    "@folio/stripes-marc-components": "2.0.0",
+    "@folio/serials-management": "2.0.1",
+    "@folio/tags": "9.0.0",
+    "@folio/tenant-settings": "10.0.0",
+    "@folio/users": "12.1.0",
+    "@types/lodash": "^4.14.197",
     "final-form": "^4.20.7",
     "final-form-arrays": "^3.0.2",
+    "lodash": "^4.17.5",
     "moment": "~2.29.0",
     "react": "~18.2.0",
     "react-dom": "~18.2.0",
     "react-final-form": "^6.5.9",
     "react-final-form-arrays": "^3.1.3",
-    "react-intl": "^6.4.7",
+    "react-intl": "^7.1.5",
     "react-query": "^3.13.0",
     "react-redux": "^8.0.5",
     "react-router": "^5.2.0",
@@ -96,23 +96,14 @@
     "rxjs": "^6.6.7",
     "zustand": "^4.1.1"
   },
-  "devDependencies": {
-    "@folio/stripes-cli": "3.2.2",
-    "@types/lodash": "^4.14.197",
-    "eslint": "^6.2.1",
-    "lodash": "^4.17.5"
-  },
+
   "resolutions": {
-    "@jridgewell/gen-mapping": "0.3.7",
-    "@types/react": "^18",
-    "@folio/stripes-acq-components": "6.0.4",
-    "@folio/stripes-template-editor": "3.4.2",
-    "typescript": "~5.5",
     "@rehooks/local-storage": "2.4.5",
     "colors": "1.4.0",
     "final-form": "^4.20.4",
     "minimist": "^1.2.3",
     "moment": "~2.29.0",
-    "redux-form": "^8.0.0"
-  }
+    "redux-form": "^8.0.0",
+    "typescript": "~5.5"
+}
 }
