Added "@types/react": "^18"

--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "minimist": "^1.2.3",
     "moment": "~2.29.0",
     "redux-form": "^8.0.0",
-    "typescript": "~5.5"
+    "typescript": "~5.5",
+    "@types/react": "^18"
 }
 }
