--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@folio/circulation": "11.0.0",
     "@folio/circulation-log": "6.0.0",
     "@folio/claims": "1.0.0",
+    "@folio/consortia-settings": "3.0.0",
     "@folio/courses": "7.0.0",
     "@folio/dashboard": "7.0.0",
     "@folio/data-export": "7.0.0",
